# TinyMOA-IHP26a

./: .gitignore  .gitmodules  README.md  info.yaml  main.py  pyproject.toml
.github/workflows/: gds.yaml
src/: config.json  pdn_cfg.tcl  project.v
src/TinyMOA/: README.md
src/TinyMOA/fpga/: AlchitryCuV2.pcf  Makefile  debug_display.v  instr_loader.v  pll.v  segment_display.v  top.v
src/TinyMOA/macro/: README.md  layer_convert.py
src/TinyMOA/macro/SRAM_512x32/: pdn_cfg.tcl
src/TinyMOA/macro/SRAM_SP_512x32/: RM_IHPSG13_1P_512x32_c2_bm_bist.gds
src/TinyMOA/src/: README.md  alu.v  cpu.v  decoder.v  qspi.v  registers.v  tcm.v  tinymoa.v
src/TinyMOA/src/alu/: alu.v
src/TinyMOA/src/dcim/: compressor.v  dcim.v
src/TinyMOA/src/memory/: sram.v
src/TinyMOA/test/: README.md
src/TinyMOA/test/integration/cpu/: tb_cpu.v  test_cpu.py
src/TinyMOA/test/integration/dcim/: tb_dcim.v  test_dcim.py
src/TinyMOA/test/integration/system/: tb_system.v  test_system.py
src/TinyMOA/test/unit/bootloader/: tb_bootloader.v  test_bootloader.py
src/TinyMOA/test/unit/counter/: tb_counter.v
src/TinyMOA/test/unit/cpu/: tb_cpu.v  test_cpu.py
src/TinyMOA/test/unit/dcim/: tb_dcim.v  test_dcim.py
src/TinyMOA/test/unit/decoder/: tb_decoder.v  test_decoder_rv32c.py  test_decoder_rv32i.py
src/TinyMOA/test/unit/qspi/: tb_qspi.v  test_qspi.py
src/TinyMOA/test/unit/registers/: tb_registers.v  test_registers.py
src/TinyMOA/test/unit/tcm/: tb_tcm.v  test_tcm.py
test/: Makefile  tb.v  test.py
